adds new dutch hyphenation pattern (submitted by Reinout Verkerk)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194141 13f79535-47bb-0310-9956-ffa450edef68

--- a/hyph/readme
+++ b/hyph/readme
@@ -31,7 +31,7 @@ pattern which isn't included in the distribution, do the following:
 the following hyphenation patterns are part of the Fop distribution
 
 de      German (traditional)
-de_DR   German (new - no 'DR' doesn't mean anything)
+de_DR   German (new spelling)
 en      American English
 en_GB   British English
 en_US   American English
@@ -39,3 +39,4 @@ es      Spanish
 fi      Finnish
 fr      French
 it      Italian
+nl      Dutch (new official Dutch spelling)
