adds Danish hyphenation file (Carlos Villegas)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194209 13f79535-47bb-0310-9956-ffa450edef68

--- a/hyph/readme
+++ b/hyph/readme
@@ -30,6 +30,7 @@ pattern which isn't included in the distribution, do the following:
 
 the following hyphenation patterns are part of the Fop distribution
 
+da      Danish
 de      German (traditional)
 de_DR   German (new spelling)
 en      American English
