fixed classpath for batik jar
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194255 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -4,7 +4,7 @@ for compiling, running or testing Fop.
 ant.jar         Ant is the scripting tool which is used to build Fop or to run 
                 the test scripts. see build.xml in root for more information
 
-w3c.jar         the svg library from the w3 consortium
+batik.jar       the svg library from Batik at xml.apache.org
 
 
 buildtools.jar  Ant tasks required for building FOP. Rebuild with 
