--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,280 @@
 ==============================================================================
 Done since 0.19 release
 
+*** General
+(Lots and lots of stuff by Keiron Liddle)
+- all properties are read, a message will indicate if it is not supported
+- all elements now handled, with a message for unsupported elements
+- uses Unknown element if namespace+element not found, rather than using
+FObjMixed
+- support for only loading user fonts for pdf when needed
+- fo:wrapper should support inheriting properties better
+- table row span, bunch of other significant table improvements by Karen Lease
+- support for drawing text into PDFGraphics2D
+- marker support (ASandstrom)
+- streaming pdf
+- changed rendering of alpha images for svg in pdf, now uses white
+background
+- proper device information for PDFGraphics2D rendering
+- code formatted (Tore Engvig)
+- element and property list mappings now added through single interface
+
+Mark Lillywhite's performance and memory patch added.
+Unfortunately breaks marker support.
+XSL-FO with markers is not a good idea until it is fixed.
+
+*** Building
+- (build.bat, build.sh) now uses only the local set class path (KLiddle)
+- (build.xml) added support for easily using w3c testsuite for build target
+test (KLiddle)
+
+*** Examples
+- (extensive.fo) sets style so that it looks better (KLiddle)
+- (images.fo) images are relative to where the doc is rather than an arbitrary
+location (KLiddle)
+- (glossary.xml, glossary.xsl) fo:marker examples (ASandstrom)
+- (embedding.fo, external.fo) added some more info, examples (KLiddle)
+- (headfoot.fo) Fix spanning row example so it works (KLease)
+
+*** Documentation
+- (embedding.xml) added info about using xslt input handler (KLiddle)
+- (examples.xml) some slightly more info about svg -> pdf (KLiddle)
+- (svg.xml) some slightly more info about svg -> pdf (KLiddle)
+- (testing.xml) added support for easily using w3c testsuite for build
+target test (KLiddle)
+
+*** Hyphenation
+- (sk.xml) added slovak hyphenation patterns; Obtained from: skhyphen.tex
+Submitted by: KRUMPOLEC Martin <krumpolec@asset.sk>
+
+*** FOP libraries
+- (buildtools.jar) added support for easily using w3c testsuite for build
+target test (KLiddle)
+
+*** XSL Code Generation
+- (elements.xsl) some independance improvements (KLiddle)
+- (foproperties.xml) setup a couple of props (KLiddle); activated
+space-start/space-end (ASandstrom)
+- (foproperties.xml) added all remaining properties, currently just with
+type String (KLiddle)
+- Support 'format' property on fo:page-sequence (ASandstrom)
+- (propmaker.xsl) put import at start; puts the right property family name
+in resulting prop file (KLiddle)
+
+*** Package org.apache.fop.apps:
+- (AWTStarter.java, CommandLineStarter.java, Driver.java) Adds Mark
+Lillywhite's performance
+and memory patch in all it's glory. Unfortunately breaks marker support.
+(AreaTree getNextPage and getPreviousPage return the current page)
+XSL-FO with markers is not a good idea until it is fixed.
+- (CommandLineOptions.java) command line support for new ps renderer
+Submitted by:  Jeremias Maerki <jeremias.maerki@outline.ch>
+- (Driver.java) combined property list setting into element setting
+also always get parser class name from one place; allows adding mappings from
+user config (KLiddle)
+- (Driver.java) command line support for new ps renderer
+Submitted by:  Jeremias Maerki <jeremias.maerki@outline.ch>
+- (Options.java) fixed error where configfile was not being set (KLiddle)
+- (Options.java) Added patch for loading config via Thread ContextClassLoader
+Submitted by:	Davanum Srinivas
+- (StreamRenderer.java) This just moves the marker supporting code from before
+Mark's patch into StreamRenderer. Not tested. (SCoffman)
+
+*** Package org.apache.fop.configuration:
+- (Configuration.java) combined property list setting into element setting
+also always get parser class name from one place (KLiddle)
+- (ConfigurationReader.java) combined property list setting into element
+setting; also always get parser class name from one place (KLiddle)
+
+*** Package org.apache.fop.datatypes:
+- (ToBeImplemented.java) indicates to be implemented status for
+properties not implemented (KLiddle)
+- (ToBeImplementedProperty.java) indicates to be implemented status for
+properties no implemented (KLiddle)
+
+*** Package org.apache.fop.extensions:
+- (ExtensionElementMapping.java) combined property list setting into element
+setting; also always get parser class name from one place (KLiddle)
+
+*** Package org.apache.fop.fo:
+started support to read all relevant properties, mostly commented; added all
+remaining elements, currently are indicated as not implemented; removed old
+elements (KLiddle)
+- (ElementMapping.java) combined property list setting into element setting
+also always get parser class name from one place (KLiddle)
+- (FONode.java) initial marker support (ASandstrom)
+- (FOTreeBuilder.java) gets all properties specified on each element; adds
+"Unknown" element for unknown elements or other namespaces; need to get a
+consistent and easy way to use the property values (KLiddle)
+- (FOTreeBuilder.java) Added patch to allow FOTreeBuilder to be reused easier
+Submitted by: Christopher Burkey
+- (FObj.java) initial marker support (ASandstrom)
+- (PropertyManager.java) handles page break for nested blocks now (KLiddle);
+addressing break boundary conditions (ASandstrom)
+
+*** Package org.apache.fop.fo.flow:
+Table border placement and border-drawing improvements (PDF only)
+Added support for the "height" property on table-row and for display-align
+(except "auto") on table-cell.
+Partial support for the "collapse" style of cell-borders was contributed
+by Ivan Demakov (Jun 14, maybe that was already in 0.19?). The support
+for "height" on table-cell was also contributed by Ivan.
+- (Block.java) changed Area methods slightly (ASandstrom); initial marker
+support, addressing break boundary conditions (ASandstrom)
+- (ListBlock.java, ListItem.java, ListItemBody.java, ListItemLabel.java)
+added support for 'returned-by' (ASandstrom)
+- (Marker.java) initial marker support (ASandstrom)
+- (PageNumber.java) Supports page-number formatting (ASandstrom)
+- (RetrieveMarker.java) initial marker support (ASandstrom)
+- (RowSpanMgr.java) Helper class for spanning rows (KLease)
+- (Table.java) Fix some bugs in table and cell border drawing and cell
+width calculations (KLease)
+- (TableBody.java) Implements spanning table rows (KLease)
+- (TableCell.java) Use a copy of BorderAndPadding to fix alignment bugs
+in header/footer cells (KLease); Fix some bugs in table and cell border drawing
+and cell width calculations (KLease); Make display-align work on table-cell
+(KLease) Implements spanning table rows (KLease)
+- (TableColumn.java) Fix some bugs in table and cell border drawing and
+cell width calculations (KLease)
+- (TableRow.java) Make display-align work on table-cell (KLease);
+checkBreakBefore signature (Weiqi Gao); Fix spanning bug; use height property
+(KLease) Implements spanning table rows (KLease)
+
+*** Package org.apache.fop.fo.pagination:
+- (PageNumberGenerator.java) helper class for page-number formatting
+(ASandstrom)
+- (PageSequence.java) initial marker support; support 'force-page-count';
+Supports page-number formatting (ASandstrom); should handle page number
+properly, with threads and multiple page sequences
+Submitted by: Jeremias Maerki <jeremias.maerki@outline.ch>
+- (RepeatablePageMasterAlternatives.java) restore ability to do blank pages
+(ASandstrom)
+- (Root.java) initial marker support; support 'force-page-count' (ASandstrom)
+; should handle page number properly, with threads and multiple page sequences
+Submitted by: Jeremias Maerki <jeremias.maerki@outline.ch>
+
+*** Package org.apache.fop.fonts:
+- (Glyphs.java) Fixes for unicode escapes that were removed during code
+formatting (Sasaki Suguru [s-sasaki@hkg.odn.ne.jp])
+- (TTFFile.java) Some glyphs are missed when more then one glyph maps to the
+same data, now fixed. (SASAKI Suguru [s-sasaki@hkg.odn.ne.jp])
+
+*** Package org.apache.fop.image:
+- (FopImageFactory.java) changed to correct mime type
+catch error if batik not available (KLiddle); compiles on jdk1.1;
+fixes possible npe when no protocol specified; tries to get the reference from
+baseDir + ref path (KLiddle)
+- (SVGReader.java) changed to correct mime type; catch error if batik not
+available (KLiddle)
+
+*** Package org.apache.fop.layout:
+- (AbsolutePositionProps.java, AccessibilityProps.java) adds the remaining
+property groups (KLiddle)
+- (Area.java) changed Area methods slightly; improving area information; initial
+marker support; addressing break boundary conditions (ASandstrom)
+- (AreaContainer.java) improving area information (ASandstrom)
+- (AuralProps.java, BackgroundProps.java) adds the remaining property groups
+(KLiddle)
+- (BlockArea.java) Fix a bug which caused FOP to overestimate the space
+available for the first line of a Block (KLease)
+- (BorderAndPadding.java) Add clone method (KLease); Make display-align work
+on table-cell (KLease)
+- (FontInfo.java) updates to pdf text painter (KLiddle)
+- (LineArea.java) Fixes bug that causes character - glyph mapping to occur
+twice in getWordWidth method causing overlapping areas.
+(Struan Judd [struan@sjudd.com])
+- (LineArea.java) Fixes for unicode escapes that were removed during code
+formatting (Sasaki Suguru [s-sasaki@hkg.odn.ne.jp])
+- (LineArea.java) Added support for various spaces, inluding non-breaking space
+  (fixes bug no 2297) (TEngvig)
+Added support for line breaking in the middle of words for CJK languages
+Fixes for bug 2243 based on a patch from rainer.garus@nexgo.de
+- (LineArea.java) This fixes bug 2556 by changing the leader with pattern
+"space" to use an InlineSpace instead of adding actually spaces. (TEngvig)
+- (MarginInlineProps.java) adds the remaining property groups (KLiddle)
+- (Page.java) initial marker support; page-number formatting (ASandstrom)
+- (RelativePositionProps.java) adds the remaining property groups (KLiddle)
+
+*** Package org.apache.fop.layout.hyphenation:
+- (Hyphenator.java) Added patch for loading config via Thread ContextClassLoader
+(Davanum Srinivas)
+- (TernaryTree.java) Fixes for unicode escapes that were removed during code
+formatting (Sasaki Suguru [s-sasaki@hkg.odn.ne.jp])
+
+*** Package org.apache.fop.layout.inline:
+- (InlineSpace.java) Added support for various spaces, including non-breaking
+space (fixes bug no 2297); Added support for line breaking in the middle of
+words for CJK languages (TEngvig)
+Fixes for bug 2243 based on a patch from rainer.garus@nexgo.de
+
+*** Package org.apache.fop.pdf:
+- (PDFColor.java) changed PDFNumber to use static methods (Liddle)
+- (PDFDocument.java) adds support for lazy loading of fonts; saves some cpu,
+memory (SASAKI Suguru <s-sasaki@hkg.odn.ne.jp>)
+- (PDFOutline.java) Adds support for unicode characters in bookmarks.
+(SASAKI Suguru [s-sasaki@hkg.odn.ne.jp])
+
+*** Package org.apache.fop.render:
+- (PrintRenderer.java) Add new addFilledRect method to make it possible to
+draw filled rectangles without any stroke in PDF; in doFrame, use rectangles
+instead of lines for borders to eliminate pixel errors (KLease)
+- (awt.AWTRenderer.java) updated to new batik interface (KLiddle)
+improvements to AWTRenderer (borders,backgrounds...)
+(Ralph LaChance/Andy Langowitz): 
+[ AWTRenderers  (-awt and -print options)
+         - eliminated 3D-effect in rendering background color
+         - borders now draw wider than 1 pixel if appropriate
+         - fixed a roundoff error in background and border dimension/location
+         - fixed a positioning error on Top and Right borders ]
+- (pdf.FontSetup.java) adds support for lazy loading of fonts
+saves some cpu, memory (SASAKI Suguru <s-sasaki@hkg.odn.ne.jp>)
+- (pdf/PDFRenderer.java) adds support for lazy loading of fonts
+saves some cpu, memory (SASAKI Suguru <s-sasaki@hkg.odn.ne.jp>)
+- (pdf/PDFRenderer.java) updated to new batik interface (KLiddle)
+- (pdf/PDFRenderer.java) added the start of svg linking; also improved a few
+text things (KLiddle)
+- (pdf/PDFRenderer.java) Add new addFilledRect method to make it possible to
+draw filled rectangles without any stroke in PDF; in doFrame, use rectangles
+instead of lines for borders to eliminate pixel errors (KLease)
+- (pdf/PDFRenderer.java) added initial impl of text painter that uses pdf fonts
+rather than stroking (KLiddle)
+- (pdf/PDFRenderer.java) workaround for a bug in Acrobat Reader where text
+may disappear or be placed in the wrong position (KLiddle)
+- (pdf.fonts.LazyFont.java) adds support for lazy loading of fonts
+saves some cpu, memory (SASAKI Suguru <s-sasaki@hkg.odn.ne.jp>)
+
+*** Package org.apache.fop.render.ps:
+New addition: postscript renderer
+Submitted by: Jeremias Maerki <jeremias.maerki@outline.ch>
+- (PSGraphics2D.java, PSRenderer.java) added support for rendering SVG
+graphics to ps, not fully functional (KLiddle)
+
+*** Package org.apache.fop.svg:
+- (PDFDocumentGraphics2D.java) fixes PDFDoc to work with changed interface;
+added the start of svg linking; should handle colour space a bit better;
+writes fonts to resources in PDFDocument; sets up the font state if not using
+strokes for text (KLiddle)
+- (PDFGraphics2D.java) Handles the graphics device better. (Kliddle)
+Also handles the alpha transparency better, at least for white backgrounds
+it works properly (Thomas E Deweese <thomas.deweese@kodak.com>)
+- (PDFGraphics2D.java) should handle colour space a bit better;
+writes fonts to resources in PDFDocument; added initial impl of text painter
+that uses pdf fonts rather than stroking (KLiddle)
+- (PDFTextPainter.java) should handle colour space a bit better; writes fonts
+to resources in PDFDocument; added initial impl of text painter that uses pdf
+fonts rather than stroking (KLiddle)
+- (PDFTranscoder.java) updated to new batik interface (KLiddle); added the
+start of svg linking; gets the xml parser class name properly (KLiddle)
+- (SVGElement.java) sets the context url properly (with baseDir)
+- (SVGObj.java, XMLObj.java) allows better for other xml data (KLiddle)
+- (SVGUtilities.java) a utility file for creating some svg things (Kliddle)
+
+*** Testing and Support
+- (tools.anttasks.Fop.java) handles baseDir (with a capital D) properly as
+suggested by Anthony Tagunov <atagunov@nnt.ru> (KLiddle)
+- (tools.anttasks.RunTest.java) added support for easily using w3c testsuite
+for build target test (KLiddle)
+
 ==============================================================================
 Done since 0.18 release
 
