AHS: FOP 0.20.1 remedial fixes
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194416 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,11 @@
 ==============================================================================
+Done since 0.20 release
+
+*** General
+- immediate fix to PDFRenderer and LazyFont, leading up to 0.20.1
+- build.xml improvements (Weiqi Gao)
+
+==============================================================================
 Done since 0.19 release
 
 *** General
