--- a/docs/design/README
+++ b/docs/design/README
@@ -2,10 +2,14 @@ These documents are written for docbook
 http://sourceforge.net/projects/docbook
 
 To convert to pdf:
-- place the docbook files in a directory name "docbook"
+- place the docbook files in a directory named "docbook"
+download and unzip the docbook distribution into the
+directory <cvs>/docs/design/dockbook/
+
 - place docbookx package in a directory name "docbookx"
 the files are avaialable here:
 http://www.oasis-open.org/docbook/xml/4.1.2/index.shtml
+
 
 - run the build script
 
