updated builtools lib and readme info about jars
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194530 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -1,16 +1,35 @@
 This directory contains some libraries or class files necessary 
 for compiling, running or testing Fop.
 
-ant.jar         Ant is the scripting tool which is used to build Fop or to run 
-                the test scripts. see build.xml in root for more information
+ant.jar
+version 1.4.1
+Ant is the scripting tool which is used to build Fop or to run 
+the test scripts. see build.xml in root for more information
 
-batik.jar       the svg library from Batik at xml.apache.org
+batik.jar
+cvs 29/10/2001
+the svg library from Batik at xml.apache.org
 
 
-buildtools.jar  Ant tasks required for building FOP. Rebuild with 
-                build.sh -f buildtools.xml in the top level directory.
-		(Note: if you are going to check in a new version of 
-		buildtools.jar, make sure you have both Xalan 1 and
-		Xalan 2 in the classpath when building it.)
+buildtools.jar
+Ant tasks required for building FOP. Rebuild with 
+build.sh -f buildtools.xml in the top level directory.
 
-stylebook.jar	Jar used for creating the FOP website
+stylebook.jar
+Jar used for creating the FOP website
+
+jimi-1.0.jar
+version 1.0
+Jimi is an image library that is used to load images
+
+xerces-1.4.3.jar
+version 1.4.3
+xerces is the xslt stylesheet processor
+
+logkit-1.0.jar
+version 1.0
+loggin library for logging in fop
+
+xalan-2.2D11.jar
+xml processor
+
