added note about where batik jar comes from
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194586 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -8,6 +8,7 @@ the test scripts. see build.xml in root for more information
 
 batik.jar
 cvs 29/10/2001
+created from all-jar build target
 the svg library from Batik at xml.apache.org
 
 
