PR: Obtained from: Submitted by:	Christian Geisert [Christian.Geisert@isu-gmbh.de]
Changed "master-name" to "master-reference" on fo:page-sequence,
fo:single-page-master-reference, fo:repeatable-page-master-reference and
fo:conditional-page-master-reference to comply with the latest XSL recommendation.
Also changed the unimplemented property space-treatment to white-space-treatment and
updated examples to use the new syntax.


git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194589 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/fo/readme.fo
+++ b/docs/examples/fo/readme.fo
@@ -43,12 +43,12 @@ This files shows next to the trivial usage of fo:block and fo:inline examples of
 
 <fo:page-sequence-master master-name="basicPSM" >
 	<fo:repeatable-page-master-alternatives>
-		<fo:conditional-page-master-reference master-name="first"
+		<fo:conditional-page-master-reference master-reference="first"
 			page-position="first" />
-		<fo:conditional-page-master-reference master-name="rest"
+		<fo:conditional-page-master-reference master-reference="rest"
 			page-position="rest" />
 		<!-- recommended fallback procedure -->
-		<fo:conditional-page-master-reference master-name="rest" />
+		<fo:conditional-page-master-reference master-reference="rest" />
 	</fo:repeatable-page-master-alternatives>
 </fo:page-sequence-master>
 
@@ -56,7 +56,7 @@ This files shows next to the trivial usage of fo:block and fo:inline examples of
   <!-- end: defines page layout -->
 
   <!-- actual layout -->
-  <fo:page-sequence master-name="basicPSM">
+  <fo:page-sequence master-reference="basicPSM">
 
 
 <fo:static-content flow-name="xsl-region-before">
