PR: Obtained from: Submitted by:	Rainer Garus <rainer.garus@nexgo.de>
Added correct metrics for euro sign in standard fonts
Fix problem with computing remaining with in LineArea where start-indent <> 0

Upgraded batik.jar to batik1.1


git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194590 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 ==============================================================================
 Done since 0.20.2 release
 *** General
+- Added correct metrics for euro sign i standard fonts
+  (bug 2105 and bug 4654)
+  Submitted by: Rainer Garus <rainer.garus@nexgo.de>
+- Fix problem with computing remaining with i LineArea where start-indent <> 0
+  (bug 4839)
+  Submitted by: Rainer Garus <rainer.garus@nexgo.de>
 - Support for CMYK and embedded ICC profiles in jpeg images (Tore Engvig)
 - Support for jpeg images in PS Renderer (Tore Engvig)
 - Add support for EPS images in PostScript renderer and limited EPS support in 
