PR: Obtained from: Submitted by:	Christian Geisert [Christian.Geisert@isu-gmbh.de]
Updates tests to use master-reference in page-sequences


git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194593 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -37,7 +37,7 @@ remaining for content. (Karen Lease)
   fo:single-page-master-reference, fo:repeatable-page-master-reference and 
   fo:conditional-page-master-reference to comply with the latest XSL recommendation.
   Also changed the unimplemented property space-treatment to white-space-treatment and 
-  updated examples to use the new syntax.
+  updated examples and tests to use the new syntax.
   Submitted by: Christian Geisert [Christian.Geisert@isu-gmbh.de]
 - Add support for inline-progression-dimension and table-layout. (Karen)
 - Add support for letter-spacing.
