Indicated changes wrt Jimi
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194633 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -14,3 +14,10 @@ buildtools.jar  Ant tasks required for building FOP. Rebuild with
 		Xalan 2 in the classpath when building it.)
 
 stylebook.jar	Jar used for creating the FOP website
+
+*** OPTIONAL ***
+
+jimi.jar			May be obtained from http://java.sun.com/products/jimi/.
+					Place jimi*.jar in lib/; modify batch/shell script
+					classpaths.
+
